welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: ')' expected but 'return' found.
	if (a+b==10 || a+c==10 || (b+c==10) return 10
                                            ^blueTicket:3: error: ';' expected but 'if' found.
	if ((a+b==10*(b+c)) || (a+b==10*(a+c))) return 5
        ^